syntax = "proto3";

package model;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "proto/model/card.proto";
import "proto/model/character.proto";
import "proto/model/enums.proto";
import "proto/model/event.proto";
import "proto/model/player.proto";
import "proto/model/script.proto";

option go_package = "github.com/user/repo/proto/model";

// GameState 表示游戏实例的权威当前状态。
message GameState {
  string game_id = 1;
  Script script = 2;
  map<int32, Character> characters = 3;
  map<int32, Player> players = 4;
  int32 current_day = 5;
  int32 current_loop = 6;
  GamePhase current_phase = 7;
  map<int32, bool> active_tragedies = 8;
  map<int32, bool> prevented_tragedies = 9;
  map<int32, CardList> played_cards_this_day = 10;
  map<int32, CardList> played_cards_this_loop = 11;
  google.protobuf.Timestamp last_update_time = 12;
  repeated GameEvent day_events = 13;
  repeated GameEvent loop_events = 14;
}

// PlayerAction 代表单个玩家提交的动作。
message PlayerAction {
  string player_id = 1;
  string game_id = 2;
  ActionType type = 3;
  google.protobuf.Struct payload = 4;
}
